...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(title: const Text('Tasks')),
      body: const TaskList(),
      floatingActionButton: FloatingActionButton.extended(
        tooltip: 'Create task',
        onPressed: () async {
          await Navigator.push<bool>(
            context,
            MaterialPageRoute<bool>(builder: (context) => const CreateTask()),
          );
        },
...
