...
        return Scaffold(
          appBar: AppBar(
            title: Text(task.name),
            actions: [
              IconButton(
                icon: const Icon(Icons.edit_outlined),
                tooltip: 'Edit',
                onPressed: () async {
                  await Navigator.push<bool>(
                    context,
                    MaterialPageRoute<bool>(
                      builder: (context) => UpdateTask(task: task),
                    ),
...
