...
        "INSERT INTO task (id, name, description, task) VALUES (2, 'Say something kind', 'Say something kind to yourself out loud', 'Say: \"I am doing my best\" or another kind phrase.')",
      );
      await db.execute(
        "INSERT INTO task (id, name, description, task) VALUES (3, 'Take a walk', 'Step outside for a short walk', 'Walk for 5-15 minutes in a safe and calming environment.')",
      );
      await db.execute(
        "INSERT INTO task (id, name, description, task) VALUES (4, 'Drink water', 'Hydrate', 'Slowly drink a glass of water to fuel your body.')",
      );

      // breathing exercise examples
      await db.execute(
        "INSERT INTO breathing (id, name, countIn, holdIn, countOut, holdOut, reps) VALUES (1, 'Square breathing', 4, 4, 4, 4, 6)",
      );
...
